--- a/resources/sass/partials/_header.scss
+++ b/resources/sass/partials/_header.scss
@@ -17,50 +17,40 @@
     }
   }
 }
-header {
-  //background: linear-gradient(#e66465, #9198e5);
+.prova {
   width: 100%;
-  height:620px;
-  margin-top:140px;
-  padding:20px 0;
-  background-position: center;
-  background-size: cover;
-
-  & .layover{
-    //margin:70px auto 10px auto;
-    width: 100%;
-    height: 100%;
-    //background-color: rgba(0, 0, 0, 0.3);
-  }
+  height:350px;
+  
   & nav {
-    background-color:#ffbf00b3 ;
-   // background: linear-gradient(to center, #e2eeee, #FFBF00);
-    position: fixed;
-    z-index:80;
-    top: 0;
-    right:0;
-  }
+    width: 100%;
+    background-color:#ffbf00b3;
+  //  // background: linear-gradient(to center, #e2eeee, #FFBF00);
+  //   position: fixed;
+  //   top: 0;
+  //   right:0;
+ }
 
-  & nav div ul li {
-    font-size: 24px;
-  }
+  // & nav div ul li {
+  //   font-size: 24px;
+  // }
     // header-content guest
    & .header-content-guest{
-     background-color: darkblue;
+     background-image: url('../../../public/img/sfondo-verde.png');
+     background-position: center;
+     background-size: cover;
      display: flex;
      justify-content: center;
-     background-color:transparent;
 
 
 
-     @media screen and(max-width: 992px){
-       flex-direction: column-reverse;
-       align-items: center;
-     }
+    //  @media screen and(max-width: 992px){
+    //    flex-direction: column-reverse;
+    //    align-items: center;
+    //  }
 
      & .hcg-left{
      //  background-color: cornflowerblue;
-       width: 50%;
+       width: 100%;
        height: 300px;
        margin-top:60px;
        padding:20px;
@@ -74,18 +64,16 @@ header {
        }
 
 
-       & h2 {
+       & h1 {
+         width: 100%;
         color:#272343;
         font-weight:bold;
         padding-top:20px;
          font-family:Arial, Helvetica, sans-serif;
-         font-size: 70px;
+         font-size: 60px;
          text-align: center;
-        @media screen and(max-width: 992px){
-          font-size: 40px;
-        }
-        @media screen and(max-width: 766px){
-          font-size: 30px;
+        @media screen and(max-width: 768px){
+          font-size: 50px;
         }
        }
 
@@ -100,14 +88,18 @@ header {
         }
 
         & input{
-          width: 500px;
-          height:100px;
-          border-radius: 15px;
+          width: 600px;
+          border-radius: 10px;
           margin-top: 20px;
-          text-align:justify;
-          padding:10px;
-          font-size: 40px;
+          outline: none;
+          padding: 10px 5px;
+          text-align: center;
 
+          @media screen and(max-width: 766px){
+            width: 300px;
+            padding: 5px 0;
+            margin-top: 5px;
+          }
         }
 
         & .search-results {
@@ -169,9 +161,7 @@ header {
 // }
 
 .nav-item{
-  display:flex;
-  flex-direction: row;
-  align-items:center;
+  
 
   .nav-link:hover{
     text-decoration: underline;
