--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10969,7 +10969,7 @@ header .layover {
   margin: 87px auto 10px auto;
   width: 100%;
   height: 100%;
-  background-image: url(/images/sfondo-verde2.png?ba6258bfdfac20499e5f343946fa48a3);
+  background-image: url(/images/sfondo-verde1.png?1924aecbca63db77031937c960e4ad7e);
   background-size: cover;
   background-position: center;
 }
@@ -11563,63 +11563,13 @@ body {
   font-family: Gotham, Arial, Helvetica Neue, Helvetica, sans-serif;
 }
 
-.navbar-show .collapse-show {
-  width: 100%;
-  background-color: rgba(255, 191, 0, 0.9);
-  height: 80px;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 3000;
-  display: flex;
-  justify-content: space-between;
-}
-
-.navbar-show .collapse-show .navbar-nav-show-left {
-  width: 400px;
-  background: violet;
-}
-
-.navbar-show .collapse-show .navbar-nav-show-left a {
-  color: black;
-  font-size: 25px;
-}
-
-.navbar-show .collapse-show .navbar-nav-show-left a .fas {
-  color: black;
-}
-
-.navbar-show .collapse-show .navbar-nav-show-right {
-  background: yellow;
-  display: flex;
-  flex-direction: row;
-  padding-right: 30px;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.navbar-show .collapse-show .navbar-nav-show-right .list-item {
-  color: #272343;
-  text-decoration: underline;
-  text-transform: uppercase;
-  font-size: 20px;
-}
-
-.navbar-show .collapse-show .navbar-nav-show-right .list-item a {
-  color: #272343;
-}
-
-.navbar-show .collapse-show .navbar-nav-show-right .nav-item {
-  color: #272343;
-  text-transform: uppercase;
-  font-size: 20px;
-  padding-right: 20px;
+#main {
+  margin-top: 87px;
 }
 
 .carousel-item {
   height: 400px;
   width: 100%;
-  margin-top: 80px;
 }
 
 .carousel-item .title-color {
@@ -11714,10 +11664,11 @@ body {
 }
 
 .text-ordina {
-  padding: 24px 0 12px;
-  text-align: center;
+  padding: 30px 0 15px;
+  text-align: justify;
+  margin-left: 15px;
   font-weight: 600;
-  font-size: 48px;
+  font-size: 45px;
   color: #000;
 }
 
@@ -11727,66 +11678,62 @@ body {
   margin: 0 auto;
   display: flex;
   flex-direction: row;
-  flex-wrap: nowrap;
 }
 
 #products .container2 {
-  background-color: orange;
   width: 100%;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
 }
 
 #products .container2 #product-items {
-  background: black;
-  width: 80%;
+  width: 100%;
   padding: 20px;
   margin-left: 30px;
   height: 500px;
-  margin: auto;
+  margin: 0 auto;
   overflow-y: scroll;
+  scrollbar-width: none;
 }
 
-#products .container2 .product-title {
-  width: 1200px;
-  background: black;
-  padding-right: 30px;
+#products .container2 #product-items ::-webkit-scrollbar {
+  display: none;
 }
 
 #products .container2 .contenitore-piatti-img {
-  width: 400px;
+  width: 100%;
   background: white;
   display: flex;
   justify-content: center;
   flex-direction: column;
   padding: 5px;
+  margin-left: 5px;
   border-radius: 10px;
-  border: 2px solid lightgrey;
-  box-shadow: 3px 3px 3px ligthgrey;
+  border: 3px solid lightgrey;
+  box-shadow: 3px 3px 3px grey;
 }
 
 #products .container2 .contenitore-piatti-img .img-container {
-  width: 250px;
+  width: 100%;
   height: 200px;
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  margin-top: 10px;
-  margin-left: 40px;
+  margin: 0 auto;
   padding: 3px;
 }
 
 #products .container2 .contenitore-piatti-img .img-container img {
   width: 100%;
-  background: yellow;
+  margin: 0 auto;
 }
 
 #products .container2 .card-piatti {
-  width: 300px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   height: 200px;
   margin-top: 20px;
+  padding-bottom: 10px;
 }
 
 #products .container2 .card-piatti h5 {
@@ -11808,8 +11755,23 @@ body {
 
 #products .container2 .card-piatti .prezzo-card {
   font-size: 20px;
+  text-align: center;
   margin-top: 30px;
   padding-left: 5px;
+}
+
+#products .container2 .card-piatti .contenitore-btn-aggiungi {
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+}
+
+#products .container2 .card-piatti .contenitore-btn-aggiungi .btn-aggiungi {
+  width: 100px;
+  padding: 5px;
+  border-radius: 15px;
+  background-color: #00c79c;
+  font-size: 15px;
 }
 
 #about-sec {
@@ -11842,11 +11804,6 @@ body {
     opacity: 0;
   }
 
-  50% {
-    transform: translateX(15px);
-    opacity: 0;
-  }
-
   100% {
     transform: translateX(0);
     opacity: 1;
@@ -11856,11 +11813,6 @@ body {
 @keyframes textRight {
   0% {
     transform: translateX(30px);
-    opacity: 0;
-  }
-
-  50% {
-    transform: translateX(15px);
     opacity: 0;
   }
 
@@ -11876,16 +11828,6 @@ body {
     opacity: 0;
   }
 
-  50% {
-    transform: translateX(-80px);
-    opacity: 1;
-  }
-
-  75% {
-    transform: translateX(-40px);
-    opacity: 1;
-  }
-
   100% {
     transform: translateX(0);
     opacity: 1;
@@ -11896,16 +11838,6 @@ body {
   0% {
     transform: translateX(-120px);
     opacity: 0;
-  }
-
-  50% {
-    transform: translateX(-80px);
-    opacity: 1;
-  }
-
-  75% {
-    transform: translateX(-40px);
-    opacity: 1;
   }
 
   100% {
@@ -12032,7 +11964,6 @@ body {
   box-shadow: 2px 2px 2px 2px lightgrey;
   margin-top: 50px;
   width: 500px;
-  height: 400px;
   border-radius: 10px;
   padding: 10px;
   margin-right: 50px;
@@ -12046,44 +11977,57 @@ body {
 
 #carr .img-carr {
   width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 #carr .img-carr .moto {
-  width: 10%;
-  margin: 0 auto;
+  width: 15%;
+  padding: 10px;
 }
 
 #carr .img-carr .pollice {
-  width: 10%;
-  margin: 0 auto;
+  width: 15%;
+  padding: 10px;
 }
 
 #carr .img-carr .tempo {
-  width: 10%;
-  margin: 0 auto;
+  width: 15%;
+  padding: 10px;
+}
+
+#carr .text-img-carr {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+#carr .text-img-carr small {
+  padding: 0 5px 0 10px;
+  font-size: 15px;
+  font-weight: bold;
+}
+
+#carr .contenitore-carrello-padre {
+  width: 100%;
 }
 
 #carr .contenitore-carrello {
   width: 100%;
-  background: yellow;
+  height: 200px;
   display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
   justify-content: space-between;
   padding: 10px;
   overflow-y: scroll;
+  scrollbar-width: none;
 }
 
 #carr .contenitore-carrello .contenitore_nome_piatto {
-  font-size: 20px;
-  background: coral;
-  width: 150px;
+  font-size: 15px;
 }
 
-#carr .contenitore-carrello .contenitore_prezzo_p {
-  font-size: 20px;
-  background: cornflowerblue;
-  width: 50px;
+#carr .contenitore-carrello .prezzo_p {
+  font-size: 15px;
 }
 
 #carr .container-btn-pag {
@@ -12092,26 +12036,10 @@ body {
 }
 
 #carr .container-btn-pag .btn-pagamento {
-  width: 200px;
   padding: 10px;
   border-radius: 15px;
-}
-
-.carr-header {
+  background-color: #00c79c;
   font-size: 20px;
-  position: absolute;
-  z-index: 20000;
-  top: 15px;
-  right: 30px;
-  padding-left: 50px;
-}
-
-.carr-header .show {
-  display: block;
-}
-
-.carr-header .hide {
-  display: none;
 }
 
 .navbar-brand {
