--- a/resources/sass/partials/_carrello.scss
+++ b/resources/sass/partials/_carrello.scss
@@ -16,7 +16,6 @@ color: #fff;
     box-shadow: 2px 2px 2px 2px lightgrey;
     margin-top: 50px;
     width: 500px;
-    height: 400px;
     border-radius:10px;
     padding:10px;
     margin-right:50px;
@@ -27,35 +26,51 @@ color: #fff;
     }
     .img-carr{
         width:100%;
+        display: flex;
+        justify-content: center;
        
         
 
         .moto {
-            width:10%;
-            margin:0 auto;
+            width:15%;
+            padding: 10px;
         }
         .pollice{
-            width:10%;
-            margin:0 auto;
+            width:15%;
+            padding: 10px;
             
         }
         .tempo{
-            width:10%; 
-            margin:0 auto;
+            width:15%; 
+            padding: 10px;
         }
         
     }
-     
+    .text-img-carr{
+        width:100%;      
+        display:flex;
+        justify-content:center;
+        //background-color:chartreuse;
+        small{
+            padding:0 5px 0 10px;
+            font-size:15px;
+            font-weight: bold;
+        }
+
+      }
+
+      .contenitore-carrello-padre{
+          width: 100%;
+      }
     
     .contenitore-carrello{
         width:100%;
-        background: yellow;
+        height: 200px;
         display:flex;
-        flex-direction:row;
-        flex-wrap:nowrap;
         justify-content:space-between;
         padding:10px;
         overflow-y:scroll;
+        scrollbar-width: none;
         
         // .quantita{
         //     display:flex;
@@ -63,15 +78,11 @@ color: #fff;
         //     width:30px;
         // }
         .contenitore_nome_piatto{
-           font-size:20px;
-            background: coral;
-            width:150px;
+           font-size:15px;
 
         }
-        .contenitore_prezzo_p{
-            font-size:20px;
-            background: cornflowerblue;
-            width:50px;
+        .prezzo_p{
+            font-size:15px;
         }
 
     }
@@ -81,31 +92,12 @@ color: #fff;
       margin-bottom:15px;
 
         .btn-pagamento{
-            width:200px;
             padding:10px;
             border-radius:15px;
+            background-color: rgb(0, 199, 156);
+            font-size: 20px;
         }
     }
     
-
-}
-
-.carr-header{
-   
-    font-size: 20px;
-     position: absolute;
-     z-index:20000;
-     top: 15px;
-     right: 30px; 
-     padding-left:50px;
-     
-
-    .show {
-        display: block;
-    }
-
-    .hide {
-        display: none;
-    }
 
 }
