--- a/resources/sass/partials/_show.scss
+++ b/resources/sass/partials/_show.scss
@@ -1,80 +1,13 @@
 body{
   font-family: Gotham,Arial,Helvetica Neue,Helvetica,sans-serif;
 }
-.navbar-show{
- // background:darkgray;
- // width:500px;
-  //height:200px;
-  
-  .collapse-show{
-     width:100%;
-     background-color: rgba(255, 191, 0, 0.9);
-     height:80px;
-     position:fixed;
-      top:0;
-      left:0;
-      z-index:3000;
-      display:flex;
-      justify-content: space-between;
-
-     .navbar-nav-show-left{
-       width:400px;
-        background:violet;
-
-         
-
-          a{
-            color:black;
-            font-size: 25px;
-            .fas{
-              color:black;
-            }
-          }
-         
-    }
-    .navbar-nav-show-right{
-      background:yellow;
-      display:flex;
-      flex-direction:row;
-      padding-right:30px;
-      justify-content:space-around;
-      align-items:center;
-    
-  
-    // 
-    //   }
-    
-  
-    .list-item{
-      color: #272343;
-      text-decoration: underline;
-        text-transform: uppercase;
-      font-size: 20px;
-      a{
-      color: #272343;
-      }
-    }
-  
-    .nav-item {
-      color: #272343;
-      text-transform: uppercase;
-      font-size: 20px;
-      padding-right:20px;
-      
-    }
-    }
-  
-  }
+#main{
+  margin-top: 87px;
 }
  //collapse-show
-
-    
-
 .carousel-item{
   height:400px;
   width:100%;
-margin-top:80px;
-
   .title-color{
     color:#fff;
   }
@@ -98,9 +31,7 @@ margin-top:80px;
       animation-timing-function:ease-in-out;
       animation-iteration-count: 1;
     }
-
   }
-
     @keyframes slide-btn{
     16%{
       transform: translateY(8px);
@@ -121,42 +52,29 @@ margin-top:80px;
       transform: translateY(0);
     }
   }
-
-
-
   .carousel-image-1{
   background: linear-gradient(rgba(0,0,0,.3),rgba(0,0,0,.4)),
   url('https://images.agi.it/pictures/agi/agi/2019/11/04/120651443-21e8cec9-0cd9-45a5-b7a7-c4389b844a8e.jpg');
   background-size:cover;
 }
-
 .carousel-image-2{
   background: linear-gradient(rgba(0,0,0,.3),rgba(0,0,0,.4)),
   url('https://www.saporie.com/content/dam/saporie/it/news/news/cenettaromanticaacasa-173699.jpg.sprimg..jpg');
   background-size:cover;
 }
-
 .carousel-image-3{
   background: linear-gradient(rgba(0,0,0,.3),rgba(0,0,0,.4)),
   url('https://businessmirror.com.ph/wp-content/uploads/2020/06/Dont-miss-all-food-you-love-order-now-at-foodpanda-.jpg');
   background-size:cover;
 }
-
 // sezione profili e info ristorante
-
-
-
-
-
-
-
 // sezione piatti e tipologie
-
 .text-ordina{
-  padding: 24px 0 12px;
- text-align:center;
+  padding: 30px 0 15px;
+  text-align:justify;
+  margin-left:15px;
   font-weight: 600;
-  font-size: 48px;
+  font-size: 45px;
   color: #000;
 }
 #products{
@@ -165,57 +83,43 @@ margin-top:80px;
   margin:0 auto;
   display:flex;
   flex-direction: row;
-  flex-wrap:nowrap;
-
+ // flex-wrap:nowrap;
     .container2{
-     background-color:orange;
-        width:100%;
-         display:flex;
-         flex-direction:row;
-
+    // background-color:orange;
+    width:100%;
+    display:flex;
+    flex-direction:column;
     #product-items{
-      background: black;
-      width:80%;
+      //background: black;
+      width:100%;
       padding:20px;
       margin-left:30px;
       height:500px;
-      margin:auto;  
-    //   ::-webkit-scrollbar {
-    //     width: 0px;
-    //     background: transparent; /* make scrollbar transparent */
-    // }
+      margin:0 auto;
       overflow-y:scroll;
-
+      scrollbar-width: none; //firefox
+      ::-webkit-scrollbar {
+        display: none;  // Safari and Chrome
     }
-
-   .product-title{
-      width:1200px;
-     background:black;
-      padding-right:30px;
-      
     }
-
     .contenitore-piatti-img{
-      width:400px;
+      width:100%;
       background:white;
-      display:flex;      
-      justify-content:center; 
+      display:flex;
+      justify-content:center;
       flex-direction:column;
       padding:5px;
+      margin-left:5px;
       border-radius:10px;
-      border:2px solid lightgrey;
-      box-shadow: 3px 3px 3px ligthgrey;
-
-
+      border:3px solid lightgrey;
+      box-shadow: 3px 3px 3px grey;
       .img-container{
-       // background-color:red;
-        width:250px;
+        //background-color:red;
+        width:100%;
         height:200px;
         display:flex;
         flex-direction: row;
-        justify-content:center; 
-        margin-top:10px;
-        margin-left:40px;
+        margin:0 auto;
         padding:3px;
         // position: relative;
         // overflow: hidden;
@@ -236,10 +140,8 @@ margin-top:80px;
         // }
         img{
           width:100%;
-          background:yellow;
-          
+          margin:0 auto;
         }
-
         // .product-img{
         //   &:focus,
         //   &:active{
@@ -247,95 +149,56 @@ margin-top:80px;
         //     -webkit-transform: scale(1.1);
         //     transform: scale(1.1);
         //   }
-
         // }
       }
     }
       .card-piatti{
-        width:300px;
-       // background:pink;
+        width:100%;
+        //background:pink;
         display:flex;
         flex-direction:column;
         height: 200px;
         margin-top:20px;
+        padding-bottom:10px;
         h5{
           font-size:30px;
           text-align:center;
           font-weight: 400;
           text-transform:capitalize;
         }
-
         .card-text{
           text-align:center;
           font-size:15px;
           text-transform:capitalize;
-         
-          
           ul{
             text-decoration: none;
           }
-
         }
         .prezzo-card{
           font-size:20px;
-         // background: red;        
+         text-align:center;
           margin-top:30px;
           padding-left:5px;
-         
-  
         }
-
+        .contenitore-btn-aggiungi{
+            display:flex;
+            justify-content:center;
+            padding:10px;
+          .btn-aggiungi{
+            width:100px;
+            padding:5px;
+            border-radius:15px;
+            background-color: rgb(0, 199, 156);
+            font-size: 15px;
+          }
+        }
       }
-      
-
-
     }
-  // .single-item{
-  //   display:inline-block;
-  //   vertical-align: middle;
-  //   transform: perspective(1px) translateZ(0);
-  //   box-shadow: 0 0 1px rgb(247,241,241);
-  //   position: relative;
-  //   transition-duration:0.3s;
-  //   transition-property: transform;
-  //   cursor:pointer;
-  //   &:hover,
-  //   &:focus,
-  //   &:active{
-  //     transform:translateY(-5px);
-  //   }
-
-    // &::before{
-    //   pointer-events: none;
-    //   position:absolute;
-    //   z-index:-1;
-    //   content:"";
-    //   top:100%;
-    //   left:5%;
-    //   height: 10px;
-    //   width: 90%;
-    //   opacity:0;
-    //   background: radial-gradient(ellipse at center, rgba(248,248,248,0.35)0%, rgba(247,244,244,0)80%);
-    //   transition-duration:0.3s;
-    //   transition-property:transform,opacity;
-    //   &:hover,
-    //   &:active{
-    //     opacity: 1;
-    //     transform: translateY(5px);
-    //   }
-    }
-
-
+  }
 // }
-
 // }
-
-
 //fine contenitore-piatti
-
-
 // Sezione sec
-
 #about-sec{
   margin-top: 25px;
   background-color: aliceblue;
@@ -351,39 +214,24 @@ margin-top:80px;
   animation-name:textRight;
   animation-duration: 3s;
   }
-
 }
     @keyframes textRight {
     0%{
       transform:translateX(30px);
       opacity: 0;
     }
-    50%{
-      transform:translateX(15px);
-      opacity: 0;
-    }
     100%{
       transform: translateX(0);
       opacity: 1;
     }
   }
-
     @keyframes imgLeft {
     0%{
       transform:translateX(-120px);
       opacity: 0;
     }
-    50%{
-      transform:translateX(-80px);
-      opacity: 1;
-    }
-    75%{
-      transform:translateX(-40px);
-      opacity: 1;
-    }
     100%{
       transform: translateX(0);
       opacity: 1;
     }
   }
-
