--- a/resources/sass/partials/_statistics.scss
+++ b/resources/sass/partials/_statistics.scss
@@ -11,3 +11,11 @@
         background-color:#6981f1;
     }   
 }
+
+
+.grafico{
+    width: 100%;
+    height: 100%;
+    background-image: url('/images/pianeti.gif');
+    background-size:cover;
+}
