Ramo-secondario parte 2

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12316,17 +12316,13 @@ body {
 
 .posizionamento {
   position: absolute;
-  top: 50;
   right: 0;
 }
 
 .statistiche {
   display: flex;
   justify-content: space-evenly;
-}
-
-.statistiche .table-celestina {
-  background-color: #6981f1;
+  align-items: center;
 }
 
 .grafico {
