--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10975,7 +10975,7 @@ header .layover {
 }
 
 header nav {
-  background-color: rgba(255, 191, 0, 0.7);
+  background-color: #ffbf00;
   position: fixed;
   z-index: 80;
   top: 0;
@@ -11040,7 +11040,7 @@ header .header-content-guest .hcg-left .header-searchbar {
 }
 
 header .header-content-guest .hcg-left .header-searchbar input {
-  width: 600px;
+  width: 400px;
   border-radius: 10px;
   margin-top: 20px;
   outline: none;
@@ -11681,36 +11681,49 @@ body {
 }
 
 #products .container2 {
-  width: 100%;
+  width: 80%;
+  height: 500px;
+  margin: auto;
+  overflow-y: scroll;
+  scrollbar-width: none;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+#products .container2 ::-webkit-scrollbar {
+  display: none;
 }
 
 #products .container2 #product-items {
   width: 100%;
   padding: 20px;
+  display: flex;
+  justify-content: space-between;
   margin-left: 30px;
-  height: 500px;
   margin: 0 auto;
-  overflow-y: scroll;
-  scrollbar-width: none;
-}
-
-#products .container2 #product-items ::-webkit-scrollbar {
-  display: none;
 }
 
 #products .container2 .contenitore-piatti-img {
-  width: 100%;
+  width: calc(100% / 2 - 20px);
   background: white;
   display: flex;
   justify-content: center;
   flex-direction: column;
   padding: 5px;
+  margin-bottom: 20px;
   margin-left: 5px;
   border-radius: 10px;
   border: 3px solid lightgrey;
   box-shadow: 3px 3px 3px grey;
+}
+
+@media screen and (max-width: 520px) {
+  #products .container2 .contenitore-piatti-img {
+    width: 80%;
+    margin: auto;
+    margin-bottom: 20px;
+  }
 }
 
 #products .container2 .contenitore-piatti-img .img-container {
@@ -11737,10 +11750,16 @@ body {
 }
 
 #products .container2 .card-piatti h5 {
-  font-size: 30px;
+  font-size: 25px;
   text-align: center;
   font-weight: 400;
   text-transform: capitalize;
+}
+
+@media screen and (max-width: 768px) {
+  #products .container2 .card-piatti h5 {
+    font-size: 20px;
+  }
 }
 
 #products .container2 .card-piatti .card-text {
@@ -11772,6 +11791,24 @@ body {
   border-radius: 15px;
   background-color: #00c79c;
   font-size: 15px;
+  color: white;
+}
+
+#products .container2 .card-piatti .contenitore-btn-aggiungi .btn-aggiungi:hover {
+  color: black;
+  transition: all 0.2s ease-in-out;
+}
+
+@media (prefers-reduced-motion: reduce) {
+  #products .container2 .card-piatti .contenitore-btn-aggiungi .btn-aggiungi:hover {
+    transition: none;
+  }
+}
+
+@media screen and (max-width: 920px) {
+  #products {
+    flex-direction: column;
+  }
 }
 
 #about-sec {
@@ -11844,6 +11881,11 @@ body {
     transform: translateX(0);
     opacity: 1;
   }
+}
+
+.prezzo-totale {
+  text-align: center;
+  font-weight: bold;
 }
 
 .aut-card-body {
@@ -12040,6 +12082,25 @@ body {
   border-radius: 15px;
   background-color: #00c79c;
   font-size: 20px;
+  color: white;
+}
+
+#carr .container-btn-pag .btn-pagamento:hover {
+  color: black;
+  transition: all 0.2s ease-in-out;
+}
+
+@media (prefers-reduced-motion: reduce) {
+  #carr .container-btn-pag .btn-pagamento:hover {
+    transition: none;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  #carr {
+    width: 80%;
+    margin: auto;
+  }
 }
 
 .navbar-brand {
