--- a/resources/sass/partials/_carrello.scss
+++ b/resources/sass/partials/_carrello.scss
@@ -96,8 +96,17 @@ color: #fff;
             border-radius:15px;
             background-color: rgb(0, 199, 156);
             font-size: 20px;
+            color: white;
+            &:hover{
+                color: black;
+                @include transition;
+            }
         }
     }
     
+    @media screen and (max-width: 768px){
+        width: 80%;
+        margin: auto;
+      }
 
 }
