--- a/resources/sass/partials/_show.scss
+++ b/resources/sass/partials/_show.scss
@@ -86,33 +86,44 @@ body{
  // flex-wrap:nowrap;
     .container2{
     // background-color:orange;
-    width:100%;
+    width:80%;
+    height:500px;
+    margin: auto;
+    overflow-y:scroll;
+    scrollbar-width: none; //firefox
+    ::-webkit-scrollbar {
+      display: none;  // Safari and Chrome
+    }
     display:flex;
-    flex-direction:column;
+    flex-wrap: wrap;
+    justify-content: space-between;
     #product-items{
       //background: black;
       width:100%;
       padding:20px;
+      display:flex;
+      justify-content: space-between;
       margin-left:30px;
-      height:500px;
       margin:0 auto;
-      overflow-y:scroll;
-      scrollbar-width: none; //firefox
-      ::-webkit-scrollbar {
-        display: none;  // Safari and Chrome
     }
-    }
+
     .contenitore-piatti-img{
-      width:100%;
+      width:calc(100% / 2 - 20px);
       background:white;
       display:flex;
       justify-content:center;
       flex-direction:column;
       padding:5px;
+      margin-bottom: 20px;
       margin-left:5px;
       border-radius:10px;
       border:3px solid lightgrey;
       box-shadow: 3px 3px 3px grey;
+      @media screen and(max-width:520px) {
+        width: 80%;
+        margin: auto;
+        margin-bottom: 20px;
+      }
       .img-container{
         //background-color:red;
         width:100%;
@@ -161,10 +172,13 @@ body{
         margin-top:20px;
         padding-bottom:10px;
         h5{
-          font-size:30px;
+          font-size:25px;
           text-align:center;
           font-weight: 400;
           text-transform:capitalize;
+          @media screen and (max-width: 768px){
+            font-size: 20px;
+          }
         }
         .card-text{
           text-align:center;
@@ -190,10 +204,19 @@ body{
             border-radius:15px;
             background-color: rgb(0, 199, 156);
             font-size: 15px;
+            color: white;
+            &:hover{
+              color: black;
+              @include transition;
+            }
           }
         }
       }
     }
+    @media screen and(max-width:920px) {
+      flex-direction: column;
+    }
+
   }
 // }
 // }
@@ -234,4 +257,9 @@ body{
       transform: translateX(0);
       opacity: 1;
     }
+  }
+
+  .prezzo-totale{
+    text-align: center;
+    font-weight: bold;
   }
