--- a/resources/sass/partials/_carrello.scss
+++ b/resources/sass/partials/_carrello.scss
@@ -14,12 +14,17 @@ color: #fff;
     flex-direction:column;
     align-items:center; 
     box-shadow: 2px 2px 2px 2px lightgrey;
-    margin-top: 50px;
+    // margin: 10px;
     width: 500px;
     border-radius:10px;
     padding:10px;
     margin-right:50px;
     margin-left:50px;
+
+    @media screen and (max-width: 768) {
+        margin: auto;
+    }
+
     h5{
         font-size: 35px;
         font-weight:bold;
@@ -65,7 +70,7 @@ color: #fff;
     
     .contenitore-carrello{
         width:100%;
-        height: 200px;
+        height: 150px;
         display:flex;
         justify-content:space-between;
         padding:10px;
