--- a/resources/sass/partials/_main.scss
+++ b/resources/sass/partials/_main.scss
@@ -18,6 +18,7 @@ main{
     flex-wrap:wrap;
     width: 70%;
     margin:0 auto;
+    padding: 90px;
 
     .tipologie{
       width:calc(100% / 4);
@@ -95,6 +96,7 @@ main{
     & .guest-restaurants{
      // background: linear-gradient(to right, #ffffff, hsla(184, 76%, 81%, 0.788));
       width: 100%;
+      padding: 80px 0;
       margin: auto;
       display: flex;
       justify-content: space-around;
@@ -121,7 +123,7 @@ main{
 
       & .card{
         
-        width:calc(100% / 6);
+        width:calc(100% / 4 - 30px);
         display: flex;       
         margin-top: 30px;
         margin-bottom: 30px;
@@ -145,12 +147,11 @@ main{
 
         }
 
-     
         .card-img-top {   
           display:flex;
           justify-content:center;
           width:100%; 
-          height:70%;     
+          height:90%;     
           position:relative;
 
             &:hover {
