--- a/resources/sass/partials/_statistics.scss
+++ b/resources/sass/partials/_statistics.scss
@@ -4,12 +4,10 @@
 }
 
 .statistiche{
+    width: 100%;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    // .table-celestina{
-    //     background-color:#6981f1;
-    // }   
 }
 
 .grafico{
