--- a/resources/sass/partials/_buttons.scss
+++ b/resources/sass/partials/_buttons.scss
@@ -15,3 +15,11 @@
         color: white;
     }
 }
+
+.btn-esci{
+    background-color:#F94646;
+    width: 100%;
+    border-radius: 10px;
+    padding: 5px;
+    margin-bottom: 10px;
+}
