--- a/resources/sass/partials/_restaurantMain.scss
+++ b/resources/sass/partials/_restaurantMain.scss
@@ -204,3 +204,10 @@ font-size:20px;
       text-shadow: 0 0 20px #00fff2, 0 0 30px #00fff2, 0 0 40px #00fff2, 0 0 50px #00fff2, 0 0 60px #00fff2, 0 0 70px #00fff2, 0 0 80px #00fff2, 0 1 90px #00fff2;
     }
   }
+
+  .formato_1{
+    width: 500px;
+  }
+  .formato_2{
+    width: 300px;
+  }
