--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11892,6 +11892,7 @@ body {
   padding-bottom: 80px;
   margin: auto;
   margin-bottom: 100px;
+  margin-top: 200px;
 }
 
 @media screen and (max-width: 768px) {
