--- a/resources/sass/partials/_show.scss
+++ b/resources/sass/partials/_show.scss
@@ -272,6 +272,7 @@ body{
     padding-bottom: 80px;
     margin: auto;
     margin-bottom: 100px;
+    margin-top: 200px;
     @media screen and (max-width: 768px){
       width: 100%;
       padding-bottom: 80px;
