--- a/resources/sass/partials/_commons.scss
+++ b/resources/sass/partials/_commons.scss
@@ -4,3 +4,11 @@
   box-sizing: border-box;
 }
 
+.def{
+  width: 25rem;
+  margin: auto; 
+  border: 4px solid #0f2a4b;
+  @media screen and (max-width: 768px) {
+    width: 18rem;
+  }
+}
