--- a/resources/sass/partials/_buttons.scss
+++ b/resources/sass/partials/_buttons.scss
@@ -17,7 +17,7 @@
 }
 
 .btn-esci{
-    background-color:#F94646;
+    background-color: #ff7d7d;
     width: 100%;
     border-radius: 10px;
     padding: 5px;
