--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12038,10 +12038,46 @@ body {
   color: #fff;
 }
 
-#carr {
-  position: absolute;
-  right: 0;
+.icona {
+  position: fixed;
+  top: 20%;
+  right: 25px;
+  z-index: 10000;
+}
+
+.icona i {
+  font-size: 25px;
   background-color: #ffbf00;
+  border-radius: 50%;
+  padding: 20px;
+  cursor: pointer;
+  vertical-align: middle;
+  text-align: center;
+}
+
+.icona .numero {
+  height: 30px;
+  line-height: 18px;
+  font-size: 15px;
+  padding: 6px 10px;
+  background-color: #00c79c;
+  border-radius: 50%;
+  position: fixed;
+  top: 19%;
+  right: 20px;
+  z-index: 100000;
+}
+
+.cont-carrx {
+  position: fixed;
+  top: 250px;
+  right: 20px;
+  z-index: 10000;
+}
+
+#carr {
+  background-color: #ffff;
+  border: 2px solid gray;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -12142,6 +12178,14 @@ body {
   #carr .container-btn-pag .btn-pagamento:hover {
     transition: none;
   }
+}
+
+.show {
+  display: block;
+}
+
+.hide {
+  display: none;
 }
 
 .navbar-brand {
@@ -12352,6 +12396,10 @@ body {
   width: 300px;
 }
 
+.formato_3 {
+  width: 400px;
+}
+
 .posizionamento {
   position: absolute;
   right: 0;
@@ -12362,6 +12410,12 @@ body {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+}
+
+@media screen and (max-width: 768px) {
+  .statistiche {
+    flex-direction: column;
+  }
 }
 
 .grafico {
