--- a/resources/sass/partials/_statistics.scss
+++ b/resources/sass/partials/_statistics.scss
@@ -8,6 +8,9 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    @media screen and (max-width: 768px){
+        flex-direction: column;
+    }
 }
 
 .grafico{
