--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11254,6 +11254,7 @@ footer .font .twt-lightblue:hover {
 }
 
 main h2 {
+  font-size: 45px;
   text-align: center;
   color: #272343;
   margin-bottom: 25px;
