--- a/resources/sass/partials/_main.scss
+++ b/resources/sass/partials/_main.scss
@@ -3,6 +3,8 @@ main{
 
   // tipologie
   h2{
+    font-size: 45px;
+    // font-weight: bold;
     text-align:center;
     color:#272343;
     margin-bottom:25px;
